--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
-# This file lists all contributers to the repository.
+# This file lists all individuals having contributed content to the repository.
+
 Abel Sekibaala <abel.sekibaala@gmail.com>
 Mukisa John Mary <johnmaryluxin8@gmail.com>
